--- a/backend/package.json
+++ b/backend/package.json
@@ -40,5 +40,6 @@
     "sqlite3": "^5.1.7",
     "supertest": "^7.0.0",
     "typeorm": "^0.3.20"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
