--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -7,7 +7,7 @@
       "target": "ES6",
       "module": "commonjs",
       "outDir": "./dist",
-      "rootDir": "./src",
+      "rootDir": "./",
       "lib": ["ES2023", "DOM"],
       "strict": true,
       "esModuleInterop": true,
@@ -21,7 +21,7 @@
     "target": "ES6",
     "module": "commonjs",
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": "./",
     "lib": ["ES2023", "DOM"],
     "strict": true,
     "esModuleInterop": true,
